Bug Resuelto: problema con el z-index del editor containment

--- a/layout/css/tomarClaseAudio.css
+++ b/layout/css/tomarClaseAudio.css
@@ -42,6 +42,7 @@
 
 }
 #editorContainment{
+    z-index: -20;
     width: 100%;
     display: block;
     position: fixed;
